Fix screen shot size in tutorial intro

--- a/examples.html
+++ b/examples.html
@@ -43,7 +43,7 @@
           the spreadsheet below, which endeavors to address this case.
         </p>
         <img
-          class="ui image large rounded bordered"
+          class="ui image big rounded bordered"
           src="assets/images/example_screenshots/sheet-example.png"
         />
         <p>
@@ -64,7 +64,7 @@
           formulas do.
         </p>
         <img
-          class="ui image large rounded bordered"
+          class="ui image big rounded bordered"
           src="assets/images/example_screenshots/sheet-formulas.png"
         />
         <h4>Collaboration is difficult</h4>
