added project section

--- a/examples.html
+++ b/examples.html
@@ -98,7 +98,16 @@
             </li>
           </ol>
         </p>
-        <h3>Setting Up Functions</h3>
+        <h3 id="project-header">Setting Up A Project</h3>
+        <p>
+          To get started, let's create a project that will hold all of the artifacts required by our headcount workflow. Simply navigate to Projects tab if you are not already there and click '+' icon located on the bottom right corner. Title your project appropriately and click 'Add'. Now you have a place to store any number of functions, data sources, and workflows related to your headcount model. You should see a screen similar to the one below:
+        </p>
+        <img
+          class="ui image big rounded bordered"
+          src="assets/images/example_screenshots/empty-project.png"
+        />
+
+        <h3 id="functions-header">Setting Up Functions</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -108,6 +117,8 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
+
+        
 
         <h3 id="datasets-header">Setting Up Datasets</h3>
         <p>
@@ -141,7 +152,7 @@
         <p>
           Before we can use the GSheets we created in our workflow, we need to
           connect them to Numbrz. Connecting external data sources is easy,
-          simply click the 'plus' icon on the bottom right corner of the Data
+          simply click the '+' icon located on the bottom right corner of the Data
           tab screen and fill out the necessary information. In our case, we
           want to connect a GSheet, which is the default external data source.
         </p>
@@ -381,7 +392,8 @@
           <div class="content">
             <div class="ui bulleted list">
               <div class="item"><a href="">Overview</a></div>
-              <div class="item"><a href="">Setting Up Functions</a></div>
+              <div class="item"><a href="#project-header">Setting Up A Project</a></div>
+              <div class="item"><a href="#functions-header">Setting Up Functions</a></div>
               <div class="item">
                 <a href="#datasets-header">Setting Up Datasets</a>
                 <div class="list">
