--- a/docs.html
+++ b/docs.html
@@ -212,13 +212,14 @@
           src="assets/images/docs_screenshots/connect-snowflake.png"
         />
         <p>
-          Before you can complete the link, you will need the Database URI. The URI has the
+          Before you can complete the link, you will need the Database URI. You may need to 
+          contact your Snowflake administrator to obtain this information.The URI has the
           form:
         </p>
         <pre>
     [ProjectID]/[DatabaseName]/[SchemaName]?warehouse=[WarehouseName]&amp;region=[AWSRegionCode]
          - e.g. -
-    RCXXXXX/snowflake_sample_data/tpch_sf1?warehouse=test&region=us-east-1
+     RCXXXXX/snowflake_sample_data/tpch_sf1?warehouse=test&amp;region=us-east-1
         </pre>
         <p>
           In addition, you will need a username and password with access to the table you wish 
@@ -246,7 +247,41 @@
           you so desire.
         </p>
         <h2 id="workflows-anchor">Workflows</h2>
-        <h3>Overview</h3>
+        <h3 id="workflow-overview">Overview</h3>
+        <p>
+          Numbrz Workflows turn Functions and Data into powerful applications that run at 
+          the click of a button. Workflows read rows of data from an input <em>Dataset</em> and 
+          pass these rows through a sequence of user-definable steps that perform operations on 
+          the data. These operations include using the data as input to a <em>Function</em>, as 
+          well as a number of other steps such as filtering and aggregation. Finally, the 
+          resulting data can be written to one or more output datasets.
+        </p>
+        <p>
+          <em>How do workflows work?</em><br/>
+          When executed, a workflow starts by iterating over all the rows in the input dataset.
+          It augments these rows with certain information about the workflow itself, and then
+          passes these augmented rows of data through its sequence of steps, one-at-a-time, 
+          until all rows have been seen by all steps.
+        </p>
+        <p>
+          Steps that return results, for example the <em>Execute Function</em> step 
+          (discussed below), have their results added to the row. In this way, downstream
+          steps may further operate on the results of prior steps. In addition to augmenting 
+          the data elements in a single row, some steps may collapse data, emitting fewer rows 
+          from the step than it initially received; while others may expand it, emitting more 
+          rows than the step initially received.
+        </p>
+        <p>
+          The graphic below shows how data values in individual input rows may change depending
+          upon the actions of the steps that process them. See the sections that follow for 
+          details on workflow steps.
+        </p> 
+        <img
+          class="ui image bordered rounded big"
+          src="assets/images/docs_screenshots/augmented-rows.png"
+        />
+        
+        <h3 id="workflow-create">Creating Workflows</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -257,70 +292,69 @@
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
 
-        <h3>Built-in Steps</h3>
+        <h3 id="workflow-steps">Workflow Steps</h3>
 
         <h4>Fill</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          The <em>Fill</em> step combines rows from the input dataset with rows
+          from a secondary dataset to produce a cross-join of the two datasets. 
+          In other words, for each row of input, the fill step emits rows that 
+          combine the data of the input row with the data of each row of the 
+          fill dataset. If the fill dataset consists of 10 rows, then for every
+          input row, 10 rows are emitted. Fill steps are often used to augment 
+          input with a calendar of dates, for time-based processing.
         </p>
         <h4>Execute</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          The <em>Execute Function</em> step uses data from the input rows to
+          run a Numbrz Function. The step allows the user to map data elements
+          to the functions inputs. When the workflow runs the function is 
+          executed and the results (as defined by the functions outputs) are
+          added to the data row emitted from the step. Workflow authors can leverage 
+          the accumulation of results to chain function calls, allowing subsequent 
+          executions to build on the results of prior executions. 
         </p>
         <h4>Aggregate</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          The <em>Aggregate</em> step sums values in input rows according to a defined 
+          grouping. The fill step is a step that both substantially changes the values 
+          in the data rows it emits, as well as collapsing the number of data rows emitted.
         </p>
 
         <h4>Filter</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          The <em>Filter</em> step will reduce the number of rows emitted by 
+          passing the row through a user-definable filter. Only rows that meet
+          the criteria specified by the filter will pass through the step. The
+          filter step does not change the individual values in the row 
+          in any way.
         </p>
 
         <h4>Output</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          The <em>Output</em> step writes data to a Numbrz dataset. During step
+          configuration, elements of the data rows passing through the step are 
+          mapped to fields in the dataset. Output steps still pass the data 
+          to downstream steps, allowing outputs to be chained in interesting ways.
+          The output step does not change the individual values in the row 
+          in any way.
         </p>
-
+        <p>The output step also supports an optional filter. The filter controls
+          what data will be written to the output dataset. All data rows
+          still pass through the step to any following steps.
+        </p>
         <h4>AWS Output</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          The <em>AWS Output</em> step writes data to Amazon S3 as CSV. During step
+          configuration, elements of the data rows passing through the step are 
+          mapped to fields in a delimited file. Output steps still pass the data 
+          to downstream steps, allowing outputs to be chained in interesting ways.
+          The output step does not change the individual values in the row 
+          in any way.
+        </p>
+        <p>The AWS output step also supports an optional filter. The filter controls
+          what data will be written to the output file. All data rows
+          still pass through the step to any following steps.
         </p>
 
         <h2 id="projects-anchor">Projects</h2>
@@ -370,9 +404,10 @@
           </div>
           <div class="content">
             <div class="ui bulleted list">
-              <div class="item"><a href="">Overview</a></div>
+              <div class="item"><a href="#workflow-overview">Overview</a></div>
+              <div class="item"><a href="#workflow-create">Creating Workflows</a></div>
               <div class="item">
-                <div><a href="">Built-in Steps</a></div>
+                <div><a href="#workflow-steps">Workflow Steps</a></div>
                 <div class="list">
                   <div class="item"><a href="">Fill</a></div>
                   <div class="item"><a href="">Execute</a></div>
