Fix typo in aggregate step description

--- a/docs.html
+++ b/docs.html
@@ -317,7 +317,7 @@
         <h4>Aggregate</h4>
         <p>
           The <em>Aggregate</em> step sums values in input rows according to a defined 
-          grouping. The fill step is a step that both substantially changes the values 
+          grouping. The aggregate step is a step that both substantially changes the values 
           in the data rows it emits, as well as collapsing the number of data rows emitted.
         </p>
 
