Add dataset list screenshot and description

--- a/docs.html
+++ b/docs.html
@@ -166,6 +166,17 @@
           to the data where it already resides. The datasets that are available to you are listed 
           in the Datasets tab of the Numbrz application. 
         </p>
+        <p>
+          <em>Working with Data in Numbrz</em><br/>
+          Your Datasets are organized under the <em>Data</em> tab of the Numbrz application
+          or in a <a href="#projects-anchor">Project</a> that you have established. You can delete a 
+          dataset you no longer want by clicking the <em>Delete</em> icon on the workflow list item. 
+          To change an existing dataset, click its title.
+        </p>
+        <img
+          class="ui image bordered rounded big"
+          src="assets/images/docs_screenshots/data-list.png"
+        />
         <h3 id="data-create">Creating Datasets</h3>
         <h4>Google Sheets</h4>
         <p>
